--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,3 +10,7 @@ werkzeug==3.0.1
 transformers==4.35.0
 torch==2.1.0
 sentencepiece==0.1.99
+pyannote.audio==3.1.1
+google-generativeai==0.8.5
+python-dotenv==1.1.1
+scikit-learn==1.3.2
